Fix text overflow and fix FireFox Bug where app crashes because of invalid date format

--- a/app/assets/stylesheets/activities.scss
+++ b/app/assets/stylesheets/activities.scss
@@ -39,6 +39,12 @@
     border-radius: 10px;
 }
 
+.project-activities-list-item-activity {
+    white-space: wrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 .project-activities-list-item-months {
     display: flex;
     justify-content: center;
