--- a/app/assets/stylesheets/notifications.scss
+++ b/app/assets/stylesheets/notifications.scss
@@ -27,6 +27,7 @@
         width: 100%;
         padding: 10px;
         border-radius: 5px;
+        text-overflow: ellipsis;
 
         .modify-bug-buttons {
             display: flex;
